--- a/libros/templates/libros/biblioteca_compartida.html
+++ b/libros/templates/libros/biblioteca_compartida.html
@@ -6,7 +6,7 @@
 {% if punto_gmaps %}
 <div class = "row">
 	<div class = "col-md-12">
-	<div id="mapa_ciudad"><!-- map container --></div>
+	<div id="mapa_ciudad" class="mapa_ciudad"><!-- map container --></div>
 	<script type="text/javascript">
 		var	$googlemap_latitude 	= parseFloat("{{punto_gmaps.0|safe}}"),
 			$googlemap_longitude	= parseFloat("{{punto_gmaps.1|safe}}"),
@@ -18,10 +18,75 @@
 {% endif %}
 
 <div class = "col-md-8">
-
 <br>
 <div class = "row">
-    <div class = "col-md-3 col-sm-3">
+
+    <!-- Admin BCompartida -->
+	{% if usuario_es_administrador %}
+    <div class = "row visible-sm visible-xs">
+		<div class = "col-md-10 col-md-offset-1">
+            <div class="featured-box noborder"><!-- add .transparent for no background color -->
+                <div class = "row">
+                    <a href="{% url 'libros:editar_libros_bcompartida' biblioteca_compartida.slug  %}"><i class="fa fa-cogs"></i><br>
+                        <small>Administrar libros</small></a><br>
+                    <a href="{% url 'libros:editar_info_bcompartida' biblioteca_compartida.slug %}"><small>Editar información</small></a>
+                </div>
+            </div>
+           <hr class="half-margins invisible">
+       </div>
+    </div>
+	{% endif %}
+
+    <!-- Info BCompartida -->
+	<div class = "row visible-sm visible-xs">
+		<div class = "col-md-10 col-md-offset-1">
+			<div class="box-content text-center">
+				<img class="img-responsive thumbnail" src="{{biblioteca_compartida.imagen}}" alt=""/>
+				<h3>
+					<span>{{biblioteca_compartida.nombre}}</span>
+                    {% if biblioteca_compartida.direccion_web %}
+                        <br>
+                            <a target="_blank" title="{{biblioteca_compartida.direccion_web}}" href="{{biblioteca_compartida.direccion_web}}">
+                            <i class="fa fa-external-link"></i> <br/></a>
+                        <br>
+                    {% endif %}
+					<small>{{biblioteca_compartida.ciudad.name}}</small>
+				</h3>
+			</div>
+		</div>
+	</div>
+
+    <div class = "row visible-sm visible-xs">
+        <!-- Imagen tipo BCompartida -->
+        <div class = "col-xs-offset-1 col-sm-offset-1 col-sm-4 col-xs-4">
+            {% if biblioteca_compartida.tipo.nombre == "andoteca" %}
+                <img class = "img-responsive thumbnail" src="{% static 'assets/images/letrasclub/marker_andotecas_grande.png' %} " alt="">
+            {% elif biblioteca_compartida.tipo.nombre == "biblioteca_cerrada" %}
+                <img class = "img-responsive thumbnail" src="{% static 'assets/images/letrasclub/marker_bcerrada_grande.png' %} " alt="">
+            {% else %}
+                <img class = "img-responsive thumbnail" src="{% static 'assets/images/letrasclub/marker_letras_grande.png' %}" alt="">
+            {% endif %}
+        </div>
+
+        <!-- Dirección y Horarios -->
+        <div class="testimonial classic col-sm-4 col-xs-4">
+			<p>{{biblioteca_compartida.direccion}}</p><br>
+            {% if biblioteca_compartida.horario_apertura %}
+                <p>Horarios: {{ biblioteca_compartida.horario_apertura }} </p>
+            {% endif %}
+		</div>
+
+        <!-- Contador Libros Disponibles -->
+        <div class = "col-sm-3 col-xs-3">
+            <div class="row text-center countTo">
+                <strong data-to="{{num_libros_bcompartida}}">0</strong>
+                <label>Libros Disponibles</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Imagen tipo BCompartida -->
+    <div class = "col-md-3 col-sm-3 visible-md visible-lg">
         {% if biblioteca_compartida.tipo.nombre == "andoteca" %}
             <img class = "img-responsive thumbnail" src="{% static 'assets/images/letrasclub/marker_andotecas_grande.png' %} " alt="">
         {% elif biblioteca_compartida.tipo.nombre == "biblioteca_cerrada" %}
@@ -30,33 +95,37 @@
             <img class = "img-responsive thumbnail" src="{% static 'assets/images/letrasclub/marker_letras_grande.png' %}" alt="">
         {% endif %}
     </div>
-    <div class = "col-md-9 col-sm-9">
-        <div class = "well">
-            <p>
-                <strong>
-                    Reglas:<br>
-                </strong>
-                {% if biblioteca_compartida.tipo.nombre == "biblioteca_cerrada" %}
-                    El administrador de la Biblioteca Compartida <strong>debe aceptar</strong> cualquier cambio.<br>
-                    <br>Ésta es una <strong>Biblioteca Cerrada</strong>. Es decir, no tiene un local constantemente abierto,
-                    debes <strong>contactarte</strong> con el administrador antes de intercambiar un libro. <br>
-                    <strong>No dudes</strong> en llamarle o enviarle un mensaje!
-                    el administrador estará feliz de realizar un intercambio.
-                {% elif biblioteca_compartida.tipo.nombre == "andoteca" %}
-                    <br>Ésta es una <strong>Andoteca</strong>. Es decir, está abierta a que cualquier persona tome un libro sin
-                    dejar uno a cambio, y también a que cualquier persona deje un libro como donación <i class = "fa fa-smile-o"></i>. Se <strong>actualizan</strong>
-                    los títulos disponibles periódicamente.
-                {% else %}
-                    <br>El administrador de la Biblioteca Compartida <strong>debe aceptar</strong> cualquier cambio.<br>
-                    <br>Ésta es una <strong>Biblioteca Abierta</strong>. Es decir, es un <i class = "fa fa-thumbs-o-up"></i> lugar que se ha unido
-                    a la red de libros compartidos.
-                {% endif %}
 
-                {% if biblioteca_compartida.reglas_extra %}
-                    <br><br>
-                    <i class = "fa fa-comment"></i> {{ biblioteca_compartida.reglas_extra }}
-                {% endif %}
-            </p>
+    <!-- Reglas -->
+    <div class = "row">
+        <div class = "col-md-offset-1">
+            <div class = "well">
+                <p>
+                    <strong>
+                     Reglas:<br>
+                    </strong>
+                    {% if biblioteca_compartida.tipo.nombre == "biblioteca_cerrada" %}
+                        El administrador de la Biblioteca Compartida <strong>debe aceptar</strong> cualquier cambio.<br>
+                        <br>Ésta es una <strong>Biblioteca Cerrada</strong>. Es decir, no tiene un local constantemente abierto,
+                        debes <strong>contactarte</strong> con el administrador antes de intercambiar un libro. <br>
+                        <strong>No dudes</strong> en llamarle o enviarle un mensaje!
+                        el administrador estará feliz de realizar un intercambio.
+                    {% elif biblioteca_compartida.tipo.nombre == "andoteca" %}
+                        <br>Ésta es una <strong>Andoteca</strong>. Es decir, está abierta a que cualquier persona tome un libro sin
+                        dejar uno a cambio, y también a que cualquier persona deje un libro como donación <i class = "fa fa-smile-o"></i>. Se <strong>actualizan</strong>
+                        los títulos disponibles periódicamente.
+                    {% else %}
+                        <br>El administrador de la Biblioteca Compartida <strong>debe aceptar</strong> cualquier cambio.<br>
+                        <br>Ésta es una <strong>Biblioteca Abierta</strong>. Es decir, es un <i class = "fa fa-thumbs-o-up"></i> lugar que se ha unido
+                        a la red de libros compartidos.
+                    {% endif %}
+
+                    {% if biblioteca_compartida.reglas_extra %}
+                        <br><br>
+                        <i class = "fa fa-comment"></i> {{ biblioteca_compartida.reglas_extra }}
+                    {% endif %}
+                </p>
+            </div>
         </div>
     </div>
 </div>
@@ -78,8 +147,10 @@
 
 <div class = "col-md-4">
 	<br>
+
+    <!-- Admin BCompartida -->
 	{% if usuario_es_administrador %}
-    <div class = "row">
+    <div class = "row visible-md visible-lg">
 		<div class = "col-md-10 col-md-offset-1">
             <div class="featured-box noborder"><!-- add .transparent for no background color -->
                 <div class = "row">
@@ -88,11 +159,13 @@
                     <a href="{% url 'libros:editar_info_bcompartida' biblioteca_compartida.slug %}"><small>Editar información</small></a>
                 </div>
             </div>
-            <hr class="half-margins invisible">
-        </div>
-     </div>
+           <hr class="half-margins invisible">
+       </div>
+    </div>
 	{% endif %}
-	<div class = "row">
+
+    <!-- Info BCompartida -->
+	<div class = "row visible-md visible-lg">
 		<div class = "col-md-10 col-md-offset-1">			
 			<div class="box-content text-center">	
 				<img class="img-responsive thumbnail" src="{{biblioteca_compartida.imagen}}" alt=""/>
@@ -102,15 +175,16 @@
                         <br>
                             <a target="_blank" title="{{biblioteca_compartida.direccion_web}}" href="{{biblioteca_compartida.direccion_web}}">
                             <i class="fa fa-external-link"></i> <br/></a>
-                        </br>
+                        <br>
                     {% endif %}
 					<small>{{biblioteca_compartida.ciudad.name}}</small>
 				</h3>		
 			</div>
 		</div>
 	</div>
-	
-	<div class = "col-md-8">		
+
+    <!-- Dirección y Horarios -->
+	<div class = "col-md-8 visible-md visible-lg">
 		<div class="testimonial classic">
 			<p>{{biblioteca_compartida.direccion}}</p><br>
             {% if biblioteca_compartida.horario_apertura %}
@@ -119,7 +193,8 @@
 		</div>
 	</div>
 
-	<div class = "col-md-4">
+    <!-- Contador Libros Disponibles -->
+	<div class = "col-md-4 visible-md visible-lg">
 		<div class="row text-center countTo">
 			<div class="col-md-5">
 				<strong data-to="{{num_libros_bcompartida}}">0</strong>
@@ -127,8 +202,9 @@
 			</div>
 		</div>
 	</div>
-		
-	<div class = "row">
+
+    <!-- Actividad y Comentario -->
+	<div class = "row visible-lg visible-md">
 	<div class = "col-md-12">
 	{% if user.is_authenticated %}
 		<!-- Comment form
@@ -149,7 +225,6 @@
 		</form>
 		-->
 	{% endif %}
-	<!-- Actividad -->
 	{% for act in actividad %}
         {% comment %}
 		{% if act.1 == "comment" %}
