--- a/libros/templates/libros/editar_libros_bcompartida.html
+++ b/libros/templates/libros/editar_libros_bcompartida.html
@@ -182,6 +182,7 @@ $(document).ready(function(){
 
 	$(".marcar_no_disponible").on("click", function(e){
 		e.preventDefault();
+        $(this).html("<i class='fa fa-refresh fa-spin'></i>");
 		var id_libro_disp = $(this).data("id");
 		var marcar_button = $(this);
 		$.ajax({
@@ -194,7 +195,8 @@ $(document).ready(function(){
 			},
 			success: function(){
 				location.reload();
-			},
+                {#TODO REMPLAZAR RELOAD CON CLIENT-SIDE ANIMATION#}
+            },
 			error: function(){
 				alert("Lo sentimos, hubo un problema al marcar libro como no disponible")
 			}
@@ -203,6 +205,7 @@ $(document).ready(function(){
 
 	$(".marcar_disponible").on("click", function(e){
 		e.preventDefault();
+        $(this).html("<i class='fa fa-refresh fa-spin'></i>");
 		var id_libro = $(this).data("id");
 		$.ajax({
 			url: "/libros/marcar_disponible/",
