--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="Red Social | Club Online para compartir Libros"/>
 	<meta name="Author" content="letras.club" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta property="og:image" content="{% static 'assets/images/letrasclub/logo_letras.png' %}"/>
 
 	<!-- mobile settings -->
 	<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
