--- a/templates/despues_contacto.html
+++ b/templates/despues_contacto.html
@@ -7,7 +7,7 @@
     <hr class = "half-margins invisible">
 
     {% if razon_contacto == "donacion" %}
-        <h2>Gracias por contarnos tu interés en donar tus libro!</h2>
+        <h2>Gracias por contarnos tu interés en donar tus libros!</h2>
         <br>
         <p>Seguramente muchas personas estarán felices de encontrarlos y leerlos</p>
         <p>Nos pondremos en contacto contigo lo antes posible, <br>
