nuevos mensajes de error

--- a/templates/400.html
+++ b/templates/400.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>500</title>
+    <title>400</title>
 </head>
 <body>
 <style>
@@ -32,7 +32,7 @@
     <img class = "stretch" src="{% static 'assets/images/letrasclub/500_letras.jpg' %}">
 </div>
 <div class = "titulo">
-    <h2> 500 !! - eso es, hubo un error interno o.0 </h2><br>
+    <h2> 400 !! - Solicitud Incorrecta. (Un error) o.0 </h2><br>
 </div>
 <br>
 
