--- a/templates/403.html
+++ b/templates/403.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>500</title>
+    <title>403</title>
 </head>
 <body>
 <style>
@@ -29,10 +29,10 @@
     }
 </style>
 <div id = "background">
-    <img class = "stretch" src="{% static 'assets/images/letrasclub/500_letras.jpg' %}">
+    <img class = "stretch" src="{% static 'assets/images/letrasclub/403_letras.jpeg' %}">
 </div>
 <div class = "titulo">
-    <h2> 500 !! - eso es, hubo un error interno o.0 </h2><br>
+    <h2> 403 !! Lo sentimos, pero no tienes permiso para acceder a esa página  ¬ ¬ </h2><br>
 </div>
 <br>
 
