--- a/templates/404.html
+++ b/templates/404.html
@@ -1,9 +1,40 @@
 {% load staticfiles %}
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>404</title>
+</head>
+<body>
+<style>
+    #background {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        z-index: 0;
+    }
 
-<h2> 404 ! No hemos encontrado esa página </h2>
+    .stretch {
+        width:100%;
+        height:100%;
+    }
 
-<img src="{% static 'assets/images/letrasclub/404_letras.jpg' %}">
-
+    .titulo{
+        position: relative;
+        z-index: 1;
+        text-align: center;
+        background:rgba(255,255,255,0.5);
+    }
+</style>
+<div id = "background">
+    <img class = "stretch" src="{% static 'assets/images/letrasclub/404_letras.jpg' %}">
+</div>
+<div class = "titulo">
+    <h2> 404 !! Lo sentimos, pero no hemos encontrado esa página :/ </h2><br>
+</div>
 <br>
 
-<a href="{% url 'libros:main' %} ">Página Principal</a>
+</body>
+</html>
